# pyfuncov

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
.specify/memory/: constitution.md
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
docs/docs/api/: bin.md  coverage_data.md  covergroup.md  coverpoint.md  index.md
docs/docs/guides/: covergroup.md  coverpoint.md
specs/001-python-funcov/: tasks.md
src/pyfuncov/: __init__.py
src/pyfuncov/cli/: __init__.py
src/pyfuncov/core/: report.py
src/pyfuncov/models/: bin.py  coverage_data.py  covergroup.py  coverpoint.py  enums.py
src/pyfuncov/storage/: __init__.py  json_storage.py
tests/: UNCOVERED.md  conftest.py
tests/integration/: test_persistence.py
tests/unit/: test_bin.py  test_cli.py  test_coverage_data.py  test_covergroup.py  test_coverpoint.py  test_enums.py  test_json_storage.py  test_report.py
